--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
-    <string name="url_base">http://172.20.32.75/admin_san_pacho/services/</string>
+    <string name="url_base">http://169.254.197.101/admin_san_pacho/services/</string>
+    <string name="title_activity_act_des_hot_res">San Pacho</string>
+
+    <string name="Descripcion">Nombre:</string>
 
 </resources>
